# cmake-experiments

./: CMakeLists.txt
.devcontainer/: devcontainer.json
src/: Hello.cpp
